--- a/SentimentAnalysis.ipynb
+++ b/SentimentAnalysis.ipynb
@@ -8,7 +8,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ze7cVjOvJ94k",
-        "outputId": "501e628c-e606-44c0-e829-e34875de5ffd"
+        "outputId": "85b1eca3-390c-4828-e78b-1f362db19a59"
       },
       "outputs": [
         {
@@ -37,7 +37,7 @@
           "height": 206
         },
         "id": "gAhaQqxNKJk8",
-        "outputId": "c2ef0bed-880d-428b-e10d-a09b266f7230"
+        "outputId": "aca143e6-a259-4f76-e280-85734efa754a"
       },
       "outputs": [
         {
@@ -53,7 +53,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-99811aa6-c83a-4878-9c0c-d156430c0840\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-f35909c9-cec3-49fb-a4b2-a2907a442867\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -114,7 +114,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-99811aa6-c83a-4878-9c0c-d156430c0840')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f35909c9-cec3-49fb-a4b2-a2907a442867')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -166,12 +166,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-99811aa6-c83a-4878-9c0c-d156430c0840 button.colab-df-convert');\n",
+              "        document.querySelector('#df-f35909c9-cec3-49fb-a4b2-a2907a442867 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-99811aa6-c83a-4878-9c0c-d156430c0840');\n",
+              "        const element = document.querySelector('#df-f35909c9-cec3-49fb-a4b2-a2907a442867');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -191,8 +191,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-bb32ac34-e372-4d59-9a5c-f94737293f05\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-bb32ac34-e372-4d59-9a5c-f94737293f05')\"\n",
+              "    <div id=\"df-11f55daa-7104-4edd-a2c2-d5674b98d131\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-11f55daa-7104-4edd-a2c2-d5674b98d131')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -311,7 +311,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-bb32ac34-e372-4d59-9a5c-f94737293f05 button');\n",
+              "            document.querySelector('#df-11f55daa-7104-4edd-a2c2-d5674b98d131 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -364,7 +364,7 @@
           "height": 178
         },
         "id": "9kJbYDnJTyzc",
-        "outputId": "8bae0452-5947-4633-d177-ddf190750794"
+        "outputId": "d3f1ee62-932f-4427-d976-fa3dcaddad30"
       },
       "outputs": [
         {
@@ -444,7 +444,7 @@
           "height": 335
         },
         "id": "JTyQen1ZXEnn",
-        "outputId": "1443df14-025d-4c75-f128-31d12e2dec9c"
+        "outputId": "920f17fc-7d89-4852-c1c0-778192225cf5"
       },
       "outputs": [
         {
@@ -541,7 +541,7 @@
           "height": 235
         },
         "id": "KhasooqdP3VU",
-        "outputId": "a563f962-8825-4614-c882-40df8d105de2"
+        "outputId": "89787180-d84c-4abe-8b27-4bd3750532b7"
       },
       "outputs": [
         {
@@ -566,7 +566,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fc1ccb7a-bab3-4375-8dc3-c8114da9bf28\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a9c2db8c-457e-4510-9cf4-22e4b09f8c66\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -736,7 +736,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fc1ccb7a-bab3-4375-8dc3-c8114da9bf28')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a9c2db8c-457e-4510-9cf4-22e4b09f8c66')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -788,12 +788,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-fc1ccb7a-bab3-4375-8dc3-c8114da9bf28 button.colab-df-convert');\n",
+              "        document.querySelector('#df-a9c2db8c-457e-4510-9cf4-22e4b09f8c66 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-fc1ccb7a-bab3-4375-8dc3-c8114da9bf28');\n",
+              "        const element = document.querySelector('#df-a9c2db8c-457e-4510-9cf4-22e4b09f8c66');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -813,8 +813,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-29b5d617-5003-4677-b50c-edb8db6b4ae9\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-29b5d617-5003-4677-b50c-edb8db6b4ae9')\"\n",
+              "    <div id=\"df-64156dd2-d05d-492b-83fa-46ed316be6a8\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-64156dd2-d05d-492b-83fa-46ed316be6a8')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -933,7 +933,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-29b5d617-5003-4677-b50c-edb8db6b4ae9 button');\n",
+              "            document.querySelector('#df-64156dd2-d05d-492b-83fa-46ed316be6a8 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -974,7 +974,7 @@
           "height": 335
         },
         "id": "vItz3X_LU_bT",
-        "outputId": "0c4fbfac-2418-461f-b6b3-e247aac5abb8"
+        "outputId": "ec81a560-e95b-42b0-f576-afe4d114ed12"
       },
       "outputs": [
         {
@@ -1084,7 +1084,7 @@
           "height": 423
         },
         "id": "WAX54xd8ajCE",
-        "outputId": "6694efc0-d21b-4644-d14a-b9aad60899f4"
+        "outputId": "72431c1c-11c4-4eda-d2db-a3ed9a465f10"
       },
       "outputs": [
         {
@@ -1121,7 +1121,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0777e4fb-c108-4aa0-a5cb-ec5255fd827d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-8b819c03-40f0-4f14-8e0e-08baedc00c8d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1435,7 +1435,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0777e4fb-c108-4aa0-a5cb-ec5255fd827d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8b819c03-40f0-4f14-8e0e-08baedc00c8d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1487,12 +1487,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-0777e4fb-c108-4aa0-a5cb-ec5255fd827d button.colab-df-convert');\n",
+              "        document.querySelector('#df-8b819c03-40f0-4f14-8e0e-08baedc00c8d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-0777e4fb-c108-4aa0-a5cb-ec5255fd827d');\n",
+              "        const element = document.querySelector('#df-8b819c03-40f0-4f14-8e0e-08baedc00c8d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1512,8 +1512,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-18d5b438-73bd-413e-a942-f4937ff71df4\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-18d5b438-73bd-413e-a942-f4937ff71df4')\"\n",
+              "    <div id=\"df-7ff457f9-cf45-4df2-beee-b429d200f51e\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7ff457f9-cf45-4df2-beee-b429d200f51e')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1632,14 +1632,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-18d5b438-73bd-413e-a942-f4937ff71df4 button');\n",
+              "            document.querySelector('#df-7ff457f9-cf45-4df2-beee-b429d200f51e button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_66102470-3c53-4fef-a54b-a095c59524b5\">\n",
+              "  <div id=\"id_f8041faa-3ba9-44d3-bc04-7892f2ef64f0\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1683,7 +1683,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_66102470-3c53-4fef-a54b-a095c59524b5 button.colab-df-generate');\n",
+              "        document.querySelector('#id_f8041faa-3ba9-44d3-bc04-7892f2ef64f0 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1736,7 +1736,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qD3fJVYKZGr7",
-        "outputId": "f4c1ef97-7bbe-4209-9a9a-552a43ac0161"
+        "outputId": "a2dce5bc-6c1c-406b-eaa5-1c9ed2ef9889"
       },
       "outputs": [
         {
@@ -1744,25 +1744,25 @@
           "name": "stdout",
           "text": [
             "Epoch 1/10\n",
-            "\u001b[1m1054/1054\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 5ms/step - accuracy: 0.6627 - loss: 1.7740 - val_accuracy: 0.7318 - val_loss: 1.1602\n",
+            "\u001b[1m1054/1054\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 5ms/step - accuracy: 0.6579 - loss: 1.7765 - val_accuracy: 0.7198 - val_loss: 1.2011\n",
             "Epoch 2/10\n",
-            "\u001b[1m1054/1054\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 3ms/step - accuracy: 0.7303 - loss: 1.1613 - val_accuracy: 0.7294 - val_loss: 1.1322\n",
+            "\u001b[1m1054/1054\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 4ms/step - accuracy: 0.7310 - loss: 1.1656 - val_accuracy: 0.7320 - val_loss: 1.1399\n",
             "Epoch 3/10\n",
-            "\u001b[1m1054/1054\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 3ms/step - accuracy: 0.7286 - loss: 1.0923 - val_accuracy: 0.7296 - val_loss: 1.0717\n",
+            "\u001b[1m1054/1054\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 3ms/step - accuracy: 0.7342 - loss: 1.1152 - val_accuracy: 0.7299 - val_loss: 1.0683\n",
             "Epoch 4/10\n",
-            "\u001b[1m1054/1054\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 3ms/step - accuracy: 0.7479 - loss: 1.0200 - val_accuracy: 0.7388 - val_loss: 1.0092\n",
+            "\u001b[1m1054/1054\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 3ms/step - accuracy: 0.7414 - loss: 1.0395 - val_accuracy: 0.7450 - val_loss: 1.0215\n",
             "Epoch 5/10\n",
-            "\u001b[1m1054/1054\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 3ms/step - accuracy: 0.7556 - loss: 0.9562 - val_accuracy: 0.7509 - val_loss: 0.9777\n",
+            "\u001b[1m1054/1054\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 3ms/step - accuracy: 0.7508 - loss: 0.9870 - val_accuracy: 0.7465 - val_loss: 0.9742\n",
             "Epoch 6/10\n",
-            "\u001b[1m1054/1054\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 4ms/step - accuracy: 0.7637 - loss: 0.9196 - val_accuracy: 0.7567 - val_loss: 0.9243\n",
+            "\u001b[1m1054/1054\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 4ms/step - accuracy: 0.7572 - loss: 0.9441 - val_accuracy: 0.7441 - val_loss: 0.9539\n",
             "Epoch 7/10\n",
-            "\u001b[1m1054/1054\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 3ms/step - accuracy: 0.7663 - loss: 0.8774 - val_accuracy: 0.7567 - val_loss: 0.9277\n",
+            "\u001b[1m1054/1054\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 3ms/step - accuracy: 0.7641 - loss: 0.8937 - val_accuracy: 0.7511 - val_loss: 0.9343\n",
             "Epoch 8/10\n",
-            "\u001b[1m1054/1054\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 3ms/step - accuracy: 0.7736 - loss: 0.8548 - val_accuracy: 0.7462 - val_loss: 0.9401\n",
+            "\u001b[1m1054/1054\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 3ms/step - accuracy: 0.7718 - loss: 0.8592 - val_accuracy: 0.7530 - val_loss: 0.9146\n",
             "Epoch 9/10\n",
-            "\u001b[1m1054/1054\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 3ms/step - accuracy: 0.7763 - loss: 0.8411 - val_accuracy: 0.7558 - val_loss: 0.9184\n",
+            "\u001b[1m1054/1054\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 4ms/step - accuracy: 0.7765 - loss: 0.8334 - val_accuracy: 0.7532 - val_loss: 0.9016\n",
             "Epoch 10/10\n",
-            "\u001b[1m1054/1054\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 3ms/step - accuracy: 0.7835 - loss: 0.8214 - val_accuracy: 0.7466 - val_loss: 0.9371\n"
+            "\u001b[1m1054/1054\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 3ms/step - accuracy: 0.7846 - loss: 0.8155 - val_accuracy: 0.7505 - val_loss: 0.9109\n"
           ]
         }
       ],
@@ -1779,10 +1779,32 @@
         "model.evaluate(X_test, y_test)"
       ],
       "metadata": {
-        "id": "O0oqTLFbrPgV"
+        "id": "O0oqTLFbrPgV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8672cf5f-08c4-40ca-e2d7-c95c315c1225"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m330/330\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.7542 - loss: 0.9150\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.911820650100708, 0.7528708577156067]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     }
   ],
   "metadata": {
